--- a/teste.html
+++ b/teste.html
@@ -33,6 +33,9 @@ canvas {
   cursor: pointer;
 }
 
+a:link{
+  color: aqua;
+}
 
 </style>
 </head>
@@ -43,4 +46,5 @@ canvas {
 <input type="button" onclick="startGame()" class="button" value="Iniciar"/>
 
 </body>
+<footer>© 2021 Victor M. <a href="https://github.com/victor-m302/pong-JS">Project Pong</a> </footer>
 </html>
